--- a/istio-gateway.yaml
+++ b/istio-gateway.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: networking.istio.io/v1beta1
 kind: Gateway
 metadata:
@@ -13,11 +14,13 @@ spec:
         name: http
       hosts:
         - "*"
+
+---
 apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: nginx-route
-  namespace: nginxad
+  namespace: default
 spec:
   hosts:
   - "*"
@@ -29,15 +32,15 @@ spec:
         prefix: "/hello"
     route:
     - destination:
-        host: nginx-svc
+        host: nginx-service
         port:
           number: 80
+
   - match:
     - uri:
         prefix: "/"
     route:
     - destination:
-        host: nginx-svc
+        host: nginx-service
         port:
           number: 80
-
